--- a/app/src/main/res/layout/dialog_stop_transaction.xml
+++ b/app/src/main/res/layout/dialog_stop_transaction.xml
@@ -177,8 +177,8 @@
         <Button
             android:layout_marginTop="@dimen/space_16"
             android:id="@+id/btnInvest"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/space_32"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_36sdp"
             android:layout_marginBottom="@dimen/space_4"
             android:background="@drawable/shape_btn_idle_bg"
             android:fontFamily="@font/lato_semibold"
