--- a/app/src/main/res/layout/fragment_kycregistration_a.xml
+++ b/app/src/main/res/layout/fragment_kycregistration_a.xml
@@ -53,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:hint="@string/full_name"
+                    android:hint="@string/enter_your_full_name"
                     android:inputType="textCapSentences"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
@@ -88,9 +88,9 @@
                     android:layout_marginTop="@dimen/space_4"
                     android:layout_marginEnd="@dimen/space_4"
                     android:alpha="0.8"
-                    android:background="@drawable/shape_edt_gray_round"
+                    android:background="@drawable/shape_edt_disable_gray_round"
                     android:enabled="false"
-                    android:hint="@string/pan_number"
+                    android:hint="@string/enter_pan_name"
                     android:inputType="textCapCharacters"
                     android:maxLength="10"
                     android:maxLines="1"
@@ -127,7 +127,7 @@
                     android:layout_marginTop="@dimen/space_4"
                     android:background="@drawable/shape_edt_gray_round"
                     android:drawableEnd="@drawable/ic_calendar"
-                    android:hint="@string/date_of_birth_"
+                    android:hint="@string/select"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
                     android:paddingTop="@dimen/space_8"
@@ -158,9 +158,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
                     android:alpha="0.8"
-                    android:background="@drawable/shape_edt_gray_round"
+                    android:background="@drawable/shape_edt_disable_gray_round"
                     android:enabled="false"
-                    android:hint="@string/email_id"
+                    android:hint="@string/enter_your_email_id"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
@@ -202,9 +202,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
                     android:alpha="0.8"
-                    android:background="@drawable/shape_edt_gray_round"
+                    android:background="@drawable/shape_edt_disable_gray_round"
                     android:enabled="false"
-                    android:hint="@string/mobile_number"
+                    android:hint="@string/enter_mobile_number"
                     android:inputType="number"
                     android:maxLength="10"
                     android:maxLines="1"
@@ -251,10 +251,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
                     android:layout_marginEnd="@dimen/space_4"
-                    android:alpha="0.4"
-                    android:background="@drawable/shape_edt_gray_round"
+                    android:background="@drawable/shape_edt_disable_gray_round"
                     android:enabled="false"
-                    android:hint="@string/name_of_guardian"
+                    android:hint="@string/enter_name_of_guardian"
                     android:inputType="textCapSentences"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
@@ -294,10 +293,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_4"
                     android:layout_marginTop="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
-                    android:background="@drawable/shape_edt_gray_round"
+                    android:background="@drawable/shape_edt_disable_gray_round"
                     android:enabled="@{vm.isEdit()}"
-                    android:hint="@string/guardian_pan"
+                    android:hint="@string/enter_guardian_pan"
                     android:inputType="textCapCharacters"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
@@ -315,7 +313,6 @@
                     app:layout_constraintTop_toBottomOf="@id/tvGuardianPAN"
                     tools:visibility="gone" />
 
-
                 <TextView
                     android:id="@+id/tvCertificate"
                     android:layout_width="0dp"
@@ -323,12 +320,12 @@
                     android:layout_marginTop="@dimen/default_space"
                     android:layout_marginEnd="@dimen/space_8"
                     android:fontFamily="@font/lato_semibold"
-                    android:text="Are you born before  27 Feb, 2019 ?"
                     android:textColor="@color/black"
                     app:layout_constraintBaseline_toBaselineOf="@id/switchOnOff"
                     app:layout_constraintEnd_toStartOf="@+id/switchOnOff"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/edtGuardian" />
+                    app:layout_constraintTop_toBottomOf="@id/edtGuardian"
+                    tools:text="Are you born before  27 Feb, 2019 ?" />
 
                 <ToggleButton
                     android:id="@+id/switchOnOff"
@@ -580,7 +577,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
-                    android:text="@string/nominee_name"
+                    android:text="@string/nominee_name_"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvNomineeDetailsl" />
@@ -591,7 +588,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:hint="@string/nominee_name"
+                    android:hint="@string/enter_nominee_name"
                     android:inputType="textCapSentences"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
@@ -611,7 +608,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
-                    android:text="@string/relationship"
+                    android:text="@string/relationship_"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/edtNominee" />
@@ -622,7 +619,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:hint="@string/relationship"
+                    android:hint="@string/enter_relationship"
                     android:inputType="textCapSentences"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
