--- a/app/src/main/res/layout/fragment_upcoming_transactions.xml
+++ b/app/src/main/res/layout/fragment_upcoming_transactions.xml
@@ -31,13 +31,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/no_data_found"
+            android:text="@string/no_transaction_found"
             android:textColor="@color/black"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
 
     </android.support.constraint.ConstraintLayout>
 
