--- a/app/src/main/res/layout/row_unpaid_transactions.xml
+++ b/app/src/main/res/layout/row_unpaid_transactions.xml
@@ -119,9 +119,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/space_4"
             android:maxLines="2"
+            android:text="@{data.todayNAV}"
             android:textColor="@color/black"
             android:textSize="@dimen/_9ssp"
-            app:dprice="@{data.nav}"
             app:layout_constraintEnd_toStartOf="@id/gdlEnd"
             app:layout_constraintStart_toEndOf="@id/gdlCenter"
             app:layout_constraintTop_toBottomOf="@id/tvNAVL"
