--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/ivLogin"
                 android:layout_width="225dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_50"
+                android:layout_marginTop="@dimen/_32sdp"
                 android:adjustViewBounds="true"
                 android:src="@drawable/ic_login"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -251,7 +251,7 @@
                 android:id="@+id/mDivider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="@dimen/space_32"
+                android:layout_marginTop="@dimen/_16sdp"
                 android:background="@color/semi_white"
                 app:layout_constraintTop_toBottomOf="@id/llGpl" />
 
