--- a/app/src/main/res/layout/dialog_add_fund_portfolio.xml
+++ b/app/src/main/res/layout/dialog_add_fund_portfolio.xml
@@ -231,8 +231,8 @@
 
         <Button
             android:id="@+id/btnInvest"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/space_32"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_36sdp"
             android:layout_marginTop="@dimen/default_space"
             android:layout_marginBottom="@dimen/space_4"
             android:background="@drawable/shape_btn_idle_bg"
