--- a/app/src/main/res/layout/fragment_add_bank_account.xml
+++ b/app/src/main/res/layout/fragment_add_bank_account.xml
@@ -54,8 +54,7 @@
                 android:background="@drawable/shape_edt_gray_round"
                 android:completionThreshold="1"
                 android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
-                android:entries="@array/list_of_bank"
-                android:hint="@string/select_bank"
+                android:hint="@string/choose_bank"
                 android:maxLines="1"
                 android:paddingStart="@dimen/default_space"
                 android:paddingTop="@dimen/space_8"
@@ -75,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_space"
-                android:text="@string/account_number"
+                android:text="@string/account_number_"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_4"
                 android:background="@drawable/shape_edt_gray_round"
-                android:hint="@string/account_number"
+                android:hint="@string/enter_account_number"
                 android:inputType="numberPassword"
                 android:maxLines="1"
                 android:paddingStart="@dimen/default_space"
@@ -107,7 +106,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_space"
-                android:text="@string/re_enter_account_number"
+                android:text="@string/re_enter_account_number_"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -181,6 +180,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toStartOf="@id/tvIFSCLabel"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/edtReAccountNo" />
@@ -193,7 +193,7 @@
                 android:layout_marginEnd="@dimen/space_4"
                 android:background="@drawable/shape_edt_gray_round"
                 android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
-                android:hint="@string/account_type"
+                android:hint="@string/choose_account_type"
                 android:maxLines="1"
                 android:paddingStart="@dimen/default_space"
                 android:paddingTop="@dimen/space_8"
@@ -214,7 +214,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/space_4"
                 android:layout_marginTop="@dimen/default_space"
-                android:text="@string/ifsc_code"
+                android:text="@string/ifsc_code_"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -229,7 +229,7 @@
                 android:layout_marginStart="@dimen/space_4"
                 android:layout_marginTop="@dimen/space_4"
                 android:background="@drawable/shape_edt_gray_round"
-                android:hint="@string/ifsc_code"
+                android:hint="@string/enter_ifsc_code"
                 android:inputType="textCapCharacters"
                 android:maxLength="11"
                 android:maxLines="1"
