--- a/app/src/main/res/layout/fragment_kycregistration_b.xml
+++ b/app/src/main/res/layout/fragment_kycregistration_b.xml
@@ -50,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
                     android:layout_marginEnd="@dimen/space_4"
-                    android:text="@string/pan_name"
+                    android:text="@string/pan_name_"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toStartOf="parent"
@@ -61,8 +61,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
-                    android:background="@drawable/shape_edt_gray_round"
+                    android:background="@drawable/shape_edt_disable_gray_round"
                     android:enabled="@{vm.isEdit()}"
                     android:hint="@string/enter_pan_name"
                     android:inputType="textCapCharacters"
@@ -134,8 +133,8 @@
                     android:layout_height="32dp"
                     android:layout_marginTop="@dimen/space_4"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:hint="@string/enter_country_of_birth"
                     android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
+                    android:hint="@string/enter_country_of_birth"
                     android:paddingStart="@dimen/default_space"
                     android:paddingTop="@dimen/space_8"
                     android:paddingEnd="@dimen/default_space"
@@ -182,7 +181,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
                     android:layout_marginEnd="@dimen/space_4"
-                    android:text="@string/source_of_income"
+                    android:text="@string/source_of_income_"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintEnd_toStartOf="@id/tvIncomeSlabl"
                     app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -198,7 +197,7 @@
                     android:layout_marginEnd="@dimen/space_4"
                     android:background="@drawable/shape_edt_gray_round"
                     android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
-                    android:hint="@string/source_of_income"
+                    android:hint="@string/choose_source_of_income"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
                     android:paddingTop="@dimen/space_8"
@@ -220,7 +219,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_4"
                     android:layout_marginTop="@dimen/default_space"
-                    android:text="@string/income_slab"
+                    android:text="@string/income_slab_"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_weight="1"
@@ -235,7 +234,7 @@
                     android:layout_marginTop="@dimen/space_4"
                     android:background="@drawable/shape_edt_gray_round"
                     android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
-                    android:hint="@string/income_slab"
+                    android:hint="@string/choose_income_slab"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
                     android:paddingTop="@dimen/space_8"
