--- a/app/src/main/res/layout/fragment_learn.xml
+++ b/app/src/main/res/layout/fragment_learn.xml
@@ -10,16 +10,23 @@
             type="com.tarrakki.module.learn.LearnVM" />
     </data>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvArticles"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/mRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="@dimen/default_space"
-        android:clipToPadding="false"
-        app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:context=".module.learn.LearnFragment"
-        tools:itemCount="5"
-        tools:listitem="@layout/row_article_list_item" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvArticles"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingTop="@dimen/default_space"
+            app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            tools:context=".module.learn.LearnFragment"
+            tools:itemCount="5"
+            tools:listitem="@layout/row_article_list_item" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </layout>
