--- a/app/src/main/res/layout/fragment_portfolio_details.xml
+++ b/app/src/main/res/layout/fragment_portfolio_details.xml
@@ -109,19 +109,20 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="@dimen/default_space"
-                    android:text="@string/xirr_"
+                    android:text="@{vm.goalInvestment.xirrLabel}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/gdlEnd"
-                    app:layout_constraintTop_toBottomOf="@id/tvName" />
+                    app:layout_constraintTop_toBottomOf="@id/tvName"
+                    tools:text="@string/xirr_" />
 
                 <TextView
                     android:id="@+id/tvYDR"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato_semibold"
-                    android:text="@{vm.goalInvestment.xirr + `%`}"
+                    android:text="@{vm.goalInvestment.xiRR}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/semi_black"
                     app:layout_constraintStart_toStartOf="@id/tvYDRLabel"
@@ -164,18 +165,18 @@
                 tools:listitem="@layout/row_goal_based_investment_details_list_item" />
 
             <TextView
-                android:id="@+id/tvWhen"
+                android:id="@+id/tvHowReturns"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/space_16"
                 android:layout_marginEnd="@dimen/space_16"
                 android:fontFamily="@font/lato_semibold"
-                android:text="@string/when_does_my_portfolio_update_here"
+                android:text="@string/how_are_returns_calculated"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/colorAccent" />
 
             <TextView
-                android:id="@+id/tvHowReturns"
+                android:id="@+id/tvWhen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/space_16"
@@ -183,7 +184,7 @@
                 android:layout_marginEnd="@dimen/space_16"
                 android:layout_marginBottom="@dimen/space_16"
                 android:fontFamily="@font/lato_semibold"
-                android:text="@string/how_are_returns_calculated"
+                android:text="@string/when_does_my_portfolio_update_here"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/colorAccent" />
 
