--- a/app/src/main/res/layout/summary_txt_percetage.xml
+++ b/app/src/main/res/layout/summary_txt_percetage.xml
@@ -35,6 +35,7 @@
             android:layout_toStartOf="@+id/tvDurations"
             android:background="@null"
             android:gravity="center"
+            android:hint="0"
             android:imeOptions="actionDone"
             android:inputType="numberDecimal"
             android:text="@={goalSummary.value}"
