--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -39,58 +39,59 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/default_space"
                     android:background="@drawable/shape_cart_view"
                     android:elevation="2dp"
                     android:orientation="vertical"
-                    android:layout_marginStart="@dimen/default_space"
-                    android:layout_marginEnd="@dimen/default_space"
                     android:padding="8dp">
 
                     <LinearLayout
-                        android:layout_marginTop="@dimen/space_20"
-                        android:layout_marginBottom="@dimen/space_20"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
+                        android:layout_marginTop="@dimen/space_20"
+                        android:layout_marginBottom="@dimen/space_20"
                         android:orientation="vertical">
 
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:adjustViewBounds="true"
                             android:layout_gravity="center_horizontal"
+                            android:adjustViewBounds="true"
                             android:scaleType="fitCenter"
                             android:src="@drawable/ic_empty" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/lato_semibold"
-                            android:text="Fill up your cart. The sooner you start investing, the more you earn!"
-                            android:gravity="center"
                             android:layout_gravity="center"
                             android:layout_marginTop="@dimen/default_space"
+                            android:fontFamily="@font/lato_semibold"
+                            android:gravity="center"
+                            android:text="Fill up your cart. The sooner you start investing, the more you earn!"
                             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/black"
+                            android:visibility="gone" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
                             android:layout_gravity="center"
-                            android:text="@string/your_cart_is_empty"
                             android:layout_marginTop="@dimen/space_8"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+                            android:gravity="center"
+                            android:text="Fill up your cart. The sooner you start investing, the more you earn!"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
                     </LinearLayout>
 
                 </RelativeLayout>
 
                 <LinearLayout
-                    android:layout_marginStart="@dimen/default_space"
-                    android:layout_marginEnd="@dimen/default_space"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/default_space"
                     android:orientation="vertical">
 
                     <Button
