--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -56,7 +56,7 @@
 
                         <ImageView
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="@dimen/_100sdp"
                             android:layout_gravity="center_horizontal"
                             android:adjustViewBounds="true"
                             android:scaleType="fitCenter"
