--- a/app/src/main/res/layout/fragment_transaction_confirm.xml
+++ b/app/src/main/res/layout/fragment_transaction_confirm.xml
@@ -36,10 +36,10 @@
                 android:padding="@dimen/space_8">
 
                 <android.support.v7.widget.CardView
-                    android:layout_marginTop="@dimen/space_3"
                     android:id="@+id/view2"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
+                    android:layout_marginTop="@dimen/space_3"
                     android:elevation="6dp"
                     app:cardBackgroundColor="@color/circular_bg"
                     app:cardCornerRadius="32dp"
@@ -68,8 +68,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/space_8"
                     android:layout_marginTop="@dimen/space_8"
+                    android:layout_marginBottom="@dimen/space_8"
                     android:fontFamily="@font/lato_semibold"
                     android:text="Your purchase request has been received."
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
@@ -78,11 +78,11 @@
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
-                android:layout_marginStart="@dimen/space_16"
-                android:layout_marginEnd="@dimen/space_16"
                 android:id="@+id/rvOrderItems"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_16"
+                android:layout_marginEnd="@dimen/space_16"
                 android:nestedScrollingEnabled="false"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
@@ -97,6 +97,20 @@
                 android:fontFamily="@font/lato_bold"
                 android:text="@string/explore_all_funds"
                 android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/btnToTransactionScreen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_16"
+                android:layout_marginEnd="@dimen/space_16"
+                android:layout_marginBottom="@dimen/space_16"
+                android:background="@drawable/shape_btn_idle_bg"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/go_to_unpaid_transactions"
+                android:textColor="@color/white"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
         </LinearLayout>
 
