--- a/app/src/main/res/layout/row_transaction_list_status.xml
+++ b/app/src/main/res/layout/row_transaction_list_status.xml
@@ -31,8 +31,8 @@
             <ImageView
                 android:id="@+id/imgStatus"
                 imgUrl="@{widget.actualStatusIcon}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_horizontal"
                 tools:text="SBI Banking and Financial Services Growth Direct Plan" />
 
